--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ form label,form legend{
     font-size: 18px;
     font-weight: bold;
     color: white;
-    background: yellow;
+    background:#c78c19;
     border: none;
     border-radius: 5px;
     transition: 3s all ;  
