--- a/style.css
+++ b/style.css
@@ -248,6 +248,39 @@ h1{
     width: 560px;
     margin: 1em auto;
 }
+/*css de carrusel*/
+.Carrusel{
+    position: relative;
+    height: 100%;
+    background: #111;
+    margin:0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper{
+    width: 1300px;
+    height: 450px;
+    padding: 100px 0;
+}
+
+.swiper-slide{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,rgba(0,0,0,0.145));
+}
+
+.swiper-slide img{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 
 @media (max-width: 57.5em){
 /*@media  screen and (max-width: 480px)*/ 
@@ -260,5 +293,9 @@ h1{
    
     .caja,.principal, .mapa-contenido, .contenido-diferenciales,.video{
        width: auto;
+    }
+
+    .Carrusel{
+        padding: 0 100px;
     }
    } 
