--- a/style.css
+++ b/style.css
@@ -250,13 +250,13 @@ h1{
 }
 /*css de carrusel*/
 .Carrusel{
-    position: absolute;
+    position: relative;
     height: 100%;
     background: #111;
     margin:0;
     padding: 0;
     min-height: 100vh;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -296,6 +296,6 @@ h1{
     }
 
     .Carrusel{
-        padding: 0 100px;
+        padding:0 100px ;
     }
    } 
