Mejorando pagina de Recamara y Carrusel 2.4

--- a/style.css
+++ b/style.css
@@ -318,5 +318,8 @@ a{
 
     .btn{
         position: relative;
+        font-size: 10px;
+        font-family:"Inter";
+        font-weight: 400;
     }
    } 
