--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 header{
-    background-color: #BBBBBB;
+    background: linear-gradient(#888888,#FEFEFE);
     padding: 20px;
+}
+
+.logo{
+    width: 80%;
+    margin: 0;
 }
 
 .caja{
@@ -11,7 +16,7 @@ header{
 
 nav{
     position: absolute;
-    top: 110px;
+    top: 50px;
     right: 0;
 }
 
@@ -37,6 +42,7 @@ nav a:hover{
     width: 940px;
     margin: 0 auto;
     padding: 40px;
+    background:#fafffc;
 }
 .redimension{
     width: 80%;
@@ -85,7 +91,7 @@ nav a:hover{
 
 footer{
     text-align: center;
-    background: url(Trabajo/bg.jpg);
+    background: linear-gradient(#fafffc,#555555);
     padding: 40px;
 }
 
@@ -208,7 +214,7 @@ h1{
 
 .diferenciales{
     padding: 3em 0 ;
-    background: #888888;
+    background: linear-gradient(#888888,#fafffc);
 }
 
 .contenido-diferenciales{
@@ -248,6 +254,7 @@ h1{
     width: 560px;
     margin: 1em auto;
 }
+
 /*css de carrusel*/
 .Carrusel{
     position: relative;
